; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/wiznet/extr_w5100.c_w5100_reset_indirect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/wiznet/extr_w5100.c_w5100_reset_indirect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@W5100_MR = common dso_local global i32 0, align 4
@MR_RST = common dso_local global i32 0, align 4
@MR_PB = common dso_local global i32 0, align 4
@MR_AI = common dso_local global i32 0, align 4
@MR_IND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @w5100_reset_indirect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @w5100_reset_indirect(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %3 = load %struct.net_device*, %struct.net_device** %2, align 8
  %4 = load i32, i32* @W5100_MR, align 4
  %5 = load i32, i32* @MR_RST, align 4
  %6 = call i32 @w5100_write_direct(%struct.net_device* %3, i32 %4, i32 %5)
  %7 = call i32 @mdelay(i32 5)
  %8 = load %struct.net_device*, %struct.net_device** %2, align 8
  %9 = load i32, i32* @W5100_MR, align 4
  %10 = load i32, i32* @MR_PB, align 4
  %11 = load i32, i32* @MR_AI, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @MR_IND, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @w5100_write_direct(%struct.net_device* %8, i32 %9, i32 %14)
  ret i32 0
}

declare dso_local i32 @w5100_write_direct(%struct.net_device*, i32, i32) #1

declare dso_local i32 @mdelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
